# cccpp

./: CMakeLists.txt  README.md  plan.md  telegram.md  vcpkg.json
resources/: fonts.qrc
resources/mcp/: orchestrator_server.py
resources/themes/: dark.qss  theme.qss
src/: main.cpp  test_main.cpp  test_stubs.cpp
src/core/: ChatHandler.cpp  ChatHandler.h  ClaudeProcess.cpp  ClaudeProcess.h  DaemonClient.cpp  DaemonClient.h  Database.cpp  Database.h  DiffEngine.cpp  DiffEngine.h  FileSnapshot.cpp  FileSnapshot.h  GitManager.cpp  GitManager.h  Orchestrator.cpp  Orchestrator.h  PersonalityProfile.cpp  PersonalityProfile.h  PipelineEngine.cpp  PipelineEngine.h  PtyProcess.cpp  PtyProcess.h  SessionManager.cpp  SessionManager.h  SnapshotManager.cpp  SnapshotManager.h  StreamParser.cpp  StreamParser.h  TelegramApi.cpp  TelegramApi.h  TelegramBridge.cpp  TelegramBridge.h  TelegramDaemon.cpp  TelegramDaemon.h  UnixPty.cpp  UnixPty.h  WinPty.cpp  WinPty.h
src/ui/: AgentFleetPanel.cpp  AgentFleetPanel.h  BreadcrumbBar.cpp  BreadcrumbBar.h  ChatMessageWidget.cpp  ChatMessageWidget.h  ChatPanel.cpp  ChatPanel.h  CheckpointTimeline.cpp  CheckpointTimeline.h  CodeViewer.cpp  CodeViewer.h  ContextPopup.cpp  ContextPopup.h  DiffSplitView.cpp  DiffSplitView.h  EffectsPanel.cpp  EffectsPanel.h  FileIconProvider.h  FindBar.cpp  FindBar.h  GitPanel.cpp  GitPanel.h  InlineDiffOverlay.cpp  InlineDiffOverlay.h  InlineEditBar.cpp  InlineEditBar.h  InputBar.cpp  InputBar.h  MainWindow.cpp  MainWindow.h  ModeSelector.cpp  ModeSelector.h  ModelSelector.cpp  ModelSelector.h  ProfileEditorDialog.cpp  ProfileEditorDialog.h  ProfileSelector.cpp  ProfileSelector.h  QuestionWidget.cpp  (+28 more)
src/util/: Config.cpp  Config.h  JsonUtils.cpp  JsonUtils.h  MacUtils.h  MacUtils.mm  MarkdownRenderer.cpp  MarkdownRenderer.h
